styles: reducing size on screen to avoid overflow in axis y

--- a/src/styles.css
+++ b/src/styles.css
@@ -355,6 +355,8 @@ svg.material-icons:not(:last-child) {
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .card.highlight-card.light-color {
